--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/style.css">
+    <script src="https://kit.fontawesome.com/21f12adc5b.js" crossorigin="anonymous"></script>
     <title>Hotel Paraíso</title>
 </head>
 <body>
@@ -37,6 +38,52 @@
             <li class="small" style="background-image: url(img/itacare-04.jpg);"></li>
         </ul>
     </section>
+
+    <section class="caracteristicas">
+        <h3>Único hotel pé na areia de Itacaré</h3>
+        <p>Um dos hotéis mais aclamados pela crítica de Itacaré</p>
+        <hr>
+        <ul class="grid">
+            <li>
+                <i class="fas fa-location-arrow"></i>
+                <h4>Localização</h4>
+                <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ipsa ut illum iure voluptates, nemo deleniti porro esse repudiandae incidunt obcaecati quidem ipsum assumenda dicta veniam est, placeat repellat modi eius.</p>
+            </li>
+            <li>
+                <i class="fa-solid fa-gift"></i>
+                <h4>Pacotes e Ofertas</h4>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsum, quam illo unde beatae suscipit ratione a quis. Esse facilis nihil ducimus! Consectetur rerum molestiae inventore ab. Dolores mollitia cumque velit.</p>
+            </li>
+            <li>
+                <i class="fa-solid fa-home"></i>
+                <h4>Acomodações</h4>
+                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Temporibus vel voluptatum sapiente vitae possimus non aspernatur adipisci reprehenderit officiis, nesciunt in a quas sed explicabo assumenda, porro sit maiores dicta?</p>
+            </li>
+        </ul>
+    </section>
+
+    <section class="newsletter">
+        <h3>Newsletter</h3>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestiae excepturi iusto beatae est quia dignissimos maxime consequuntur perspiciatis, enim soluta repellendus quos. Magnam laboriosam atque vero eius, reprehenderit officia deserunt?</p>
+        <hr>
+
+        <form action="">
+            <input type="text" placeholder="Email">
+            <button> Cadastrar</button>
+        </form>
+    </section>
+
+    <footer>
+        <ul>
+            <li>
+                <a href="#"><i class="fa-brands fa-facebook"></i></a>
+                <a href="#"><i class="fa-brands fa-twitter"></i></a>
+                <a href="#"><i class="fa-brands fa-pinterest"></i></a>
+                <a href="#"><i class="fa-brands fa-linkedin"></i></a>
+            </li>
+        </ul>
+        <p>All rights reserved - Hotel Paraíso 2022</p>
+    </footer>
 
   
 
